--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,3 +1,2 @@
-
-<h1>Hello, Rails!</h1>
-
+<li><%= link_to 'Sign In', new_user_session_path %></li>
+<li><%= link_to 'Sign Up', new_user_registration_path %></li>
