--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,2 +1,1 @@
-<li><%= link_to 'Sign In', new_user_session_path %></li>
-<li><%= link_to 'Sign Up', new_user_registration_path %></li>
+<h1>Hello world!</h1>
